# python-workspace-template

./: .code-workspace  .editorconfig  .gitignore  .tool-versions  README.md  pyproject.toml  pyrightconfig.json
api-server/: pyproject.toml
auth-service/: pdm.toml  pyproject.toml
core/: pyproject.toml
core/core/user/: models.py  types.py  user_constants.py  user_errors.py  user_models.py  user_types.py
core/core/utils/: datetime_utils.py
user-service/: pyproject.toml
