[project]
name = "workspace"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
  "black>=25.9.0",
  "coverage>=7.10.6",
  "pyright>=1.1.405",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
core = { workspace = true }

[tool.ruff]
include = [
  "pyproject.toml",
  "packages/*/pyproject.toml",
  "packages/*/{src,tests}/**/*.{py,pyi}",
]
extend-exclude = ["**/.*"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "A",   # flake8-builtins
  "S",   # flake8-bandit (security)
  "SIM", # flake8-simplify
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "S101", # assert
]

[tool.black]
include = '^/packages/[^/]+/(src|tests)/.*\.pyi?$'
extend-exclude = '''
(
  /\.[^/]+
)
'''
target-version = ["py313"]
line-length = 88

[tool.pytest.ini_options]
testpaths = [
  "packages/core/tests",
  "packages/api-server/tests",
  "packages/auth-service/tests",
  "packages/user-service/tests",
]
addopts = "-ra -q"

[tool.coverage.run]
source = [
  "packages/core/src",
  "packages/api-server/src",
  "packages/auth-service/src",
  "packages/user-service/src",
]
branch = true

[tool.coverage.report]
omit = ["**/.*"]
show_missing = true

[tool.coverage.html]
show_contexts = true
