[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "api-server"
version = "0.0.1"
description = "API server"
authors = [
  { name = "qomaeng", email = "qomaeng@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "core>=0.0.1",
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
]

[tool.uv.build-backend]
module-root = "."
source-include = ["api_server/**"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
autoSearchPaths = false
typeCheckingMode = "strict"
reportMissingImports = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
include = ["api_server"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "A",   # flake8-builtins
  "S",   # flake8-bandit (security)
  "SIM", # flake8-simplify
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E203", # whitespace before ':', handled by black
  "E501", # line too long, handled by black
  "C901", # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["api_server", "core"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.bandit]
skips = ["B101"] # assert

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["api_server"]

[tool.coverage.report]
show_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true
