[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "auth-service"
version = "0.0.1"
description = "Internal auth service"
authors = [
  { name = "qomaeng", email = "qomaeng@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "core>=0.0.1",
]

[tool.uv.build-backend]
module-root = "."
source-include = ["auth_service/**"]

[tool.pyright]
include = ["."]
exclude = ["**/tests", "**/docs", "**/scripts"]
extraPaths = ["../core"]
pythonVersion = "3.13"
venvPath = "../"
venv = ".venv"
typeCheckingMode = "strict"
