[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "core"
version = "0.0.1"
description = "Core library"
authors = [
  { name = "qomaeng", email = "qomaeng@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.11.9",
]

[tool.uv.build-backend]
module-root = "."
source-include = ["core/**"]

[tool.pyright]
include = ["."]
exclude = ["**/tests", "**/docs", "**/scripts"]
pythonVersion = "3.13"
venvPath = "../"
venv = ".venv"
typeCheckingMode = "strict"
